# ergo_observer_gui

./: .gitignore  Cargo.toml  Makefile  README.md  clippy.toml  index.html  rustfmt.toml
src/: app.rs  data.rs  main.rs  theme.rs  ui.rs  widgets.rs
src/data/: observer.rs  tree.rs  types.rs
src/state/: app_state.rs
src/theme/: colors.rs  fonts.rs
src/ui/: body.rs  footer.rs  header.rs  window.rs
src/ui/window/: node_connect.rs  settings.rs
src/widgets/: button.rs  canvas.rs  icon.rs  toggle.rs
src/widgets/canvas/: actor.rs  actor_connection.rs  actor_group.rs  drawings.rs  transform.rs
